# wasmedge-rust-knative-plugin-demo

./: Cargo.toml  Dockerfile  Readme.md  containerd-patch.toml  service.yml
.github/workflows/: release-bin.yml
src/: main.rs
